Adding rationale for transfer method to R and brief R EDA

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "endless-struggle",
+   "id": "chinese-driver",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "apart-sapphire",
+   "id": "attended-pillow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "outdoor-mixture",
+   "id": "likely-handbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "physical-portsmouth",
+   "id": "exact-bruce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atlantic-simple",
+   "id": "viral-boundary",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "resident-phoenix",
+   "id": "identified-stability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "configured-shower",
+   "id": "original-hayes",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "corrected-circulation",
+   "id": "stone-phase",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "subject-survey",
+   "id": "demanding-blame",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "early-sight",
+   "id": "numeric-witch",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "downtown-cross",
+   "id": "attempted-stable",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "engaged-consent",
+   "id": "significant-lambda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ancient-canberra",
+   "id": "floral-middle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "challenging-elimination",
+   "id": "human-tourism",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "expanded-marine",
+   "id": "freelance-clearance",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "opened-taiwan",
+   "id": "cordless-gross",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "modified-bowling",
+   "id": "modular-habitat",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "accessory-bridge",
+   "id": "popular-tribute",
    "metadata": {
     "tags": []
    },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-classics",
+   "id": "roman-height",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "about-literature",
+   "id": "sensitive-giving",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-meditation",
+   "id": "durable-bronze",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-abraham",
+   "id": "heard-variation",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "graphic-trauma",
+   "id": "forty-training",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-table",
+   "id": "joined-blink",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "thermal-seeking",
+   "id": "recreational-funds",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comprehensive-partner",
+   "id": "opening-egyptian",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "million-promotion",
+   "id": "opposed-actress",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "noted-convertible",
+   "id": "lightweight-begin",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "disabled-cooperation",
+   "id": "collaborative-meter",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "prime-offering",
+   "id": "incorporated-milan",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "violent-tracy",
+   "id": "ancient-purchase",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "measured-quilt",
+   "id": "changing-pattern",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incredible-flooring",
+   "id": "still-radiation",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -821,23 +821,184 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-equilibrium",
+   "id": "historic-cabinet",
    "metadata": {},
    "source": [
-    "## D) Transfer dataframe from python to R and Perform a simple EDA in R"
+    "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "medium-suffering",
+   "metadata": {},
+   "source": [
+    "### 1. Comparing the different file formats created in Python in terms of file size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "consecutive-marking",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attribution: adopt code of Gittu in DSCI 525 Lecture 2 with modification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "immune-better",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 2907.09 MiB, increment: 2838.77 MiB\n",
+      "Wall time: 33.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "# convert csv to arrow table format\n",
+    "import pyarrow.dataset as ds\n",
+    "dataset = ds.dataset(\"figshareairline/combined_data.csv\", format=\"csv\")\n",
+    "table = dataset.to_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "tender-resident",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 3673.01 MiB, increment: 828.54 MiB\n",
+      "Wall time: 10.2 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "# writing arrow table to feather format\n",
+    "import pyarrow.feather as feather\n",
+    "feather.write_feather(table, 'figshareairline/combined_data.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "square-quantity",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 4018.35 MiB, increment: 346.03 MiB\n",
+      "Wall time: 17 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "# writing arrow table to feather format\n",
+    "import pyarrow.parquet as pq\n",
+    "pq.write_to_dataset(table, 'figshareairline/combined_data.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "particular-inclusion",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.7G\tfigshareairline/combined_data.csv\n",
+      "1.1G\tfigshareairline/combined_data.feather\n",
+      "542M\tfigshareairline/combined_data.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "# seeing the size of the csv data\n",
+    "du -sh figshareairline/combined_data.csv\n",
+    "# seeing the size of the feather data\n",
+    "du -sh figshareairline/combined_data.feather\n",
+    "# seeing the size of the parquet data\n",
+    "du -sh figshareairline/combined_data.parquet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "smart-slovak",
+   "metadata": {},
+   "source": [
+    "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
+    "\n",
+    "- The traditional panda exchange would be inefficient in running time for both loading and process the data during EDA because with it has to load the entire data in memory. Moreover, its storage in csv file is the largest\n",
+    "\n",
+    "- Arrow exchange helps reduce the running time as compared to traditional panda exchange thanks to its columnar memory format and language independence or no serialization features. Instead of having to load or search through the entire data, it can efficiently search by column. However, arrow format only supports some operations for data wrangling, this could be restricting on EDA.\n",
+    "\n",
+    "- Hence, we preferred other columnar memory file formats like .feather or .pacquet.  because it has all the advantage of columnar format like arrow and it allows more flexible operations in data wrangling. \n",
+    "\n",
+    "- Between .feather and .pacquet, we chose .pacquet given it has a more established history and we think its performance would be more stable or less bugging than .feather, which is actively developed. Moreover, .pacquet file is highly portable because its file size is the smallest for the same amount of data.\n",
+    "\n",
+    "\n",
+    "*Reference: [What is Apache Parquet and why you should use it!](https://www.upsolver.com/blog/apache-parquet-why-use)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "opposed-crime",
+   "metadata": {},
+   "source": [
+    "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appointed-arlington",
+   "id": "guilty-anthropology",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "%%R\n",
+    "\n",
+    "# Looading the data from parquet\n",
+    "library(arrow)\n",
+    "r_table <- arrow::read_parquet('figshareairline/combined_data.parquet')\n",
+    "\n",
+    "# conduct simple EDA\n",
+    "start_time <- Sys.time()\n",
+    "\n",
+    "library(dplyr)\n",
+    "result <- r_table %>%\n",
+    "    group_by(model) %>%\n",
+    "    summarise(mean(`rain (mm/day)`))\n",
+    "\n",
+    "end_time <- Sys.time()\n",
+    "\n",
+    "print(result)\n",
+    "print(end_time - start_time)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "measured-cream",
+   "id": "dutch-impression",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -845,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-prince",
+   "id": "accurate-presentation",
    "metadata": {},
    "source": [
     "Discuss any challenges or difficulties you faced when dealing with this large data on your laptops. Briefly explain your approach to overcome the the challenges or reasons why you were not able to overcome them."
