add in Closing comments

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "chinese-driver",
+   "id": "legendary-horror",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "attended-pillow",
+   "id": "superior-mortality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "likely-handbook",
+   "id": "cooperative-rebate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "exact-bruce",
+   "id": "planned-measurement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "viral-boundary",
+   "id": "adjustable-orange",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "identified-stability",
+   "id": "registered-persian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "original-hayes",
+   "id": "yellow-toilet",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "stone-phase",
+   "id": "general-circus",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "demanding-blame",
+   "id": "fantastic-testimony",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-witch",
+   "id": "hired-jewelry",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "attempted-stable",
+   "id": "selective-pasta",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "significant-lambda",
+   "id": "touched-ordering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "floral-middle",
+   "id": "subsequent-celebration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "human-tourism",
+   "id": "piano-intake",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "freelance-clearance",
+   "id": "mediterranean-dance",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cordless-gross",
+   "id": "hindu-short",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "modular-habitat",
+   "id": "shared-cheat",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "popular-tribute",
+   "id": "august-sheet",
    "metadata": {
     "tags": []
    },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "roman-height",
+   "id": "printable-water",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sensitive-giving",
+   "id": "mediterranean-trust",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "durable-bronze",
+   "id": "flush-nerve",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heard-variation",
+   "id": "crucial-olympus",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "forty-training",
+   "id": "varying-shelf",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joined-blink",
+   "id": "smart-minutes",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "recreational-funds",
+   "id": "acquired-certification",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opening-egyptian",
+   "id": "auburn-margin",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-actress",
+   "id": "sound-visiting",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "lightweight-begin",
+   "id": "colonial-values",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collaborative-meter",
+   "id": "informed-twins",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "incorporated-milan",
+   "id": "smart-morris",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-purchase",
+   "id": "deadly-coaching",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "changing-pattern",
+   "id": "characteristic-gasoline",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "still-radiation",
+   "id": "urban-emission",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "historic-cabinet",
+   "id": "permanent-attribute",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medium-suffering",
+   "id": "parallel-coordinator",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size"
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "consecutive-marking",
+   "id": "detailed-store",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "immune-better",
+   "id": "tutorial-tenant",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "tender-resident",
+   "id": "stainless-breakdown",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "square-quantity",
+   "id": "recorded-volleyball",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "particular-inclusion",
+   "id": "concrete-frost",
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smart-slovak",
+   "id": "defined-imperial",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-crime",
+   "id": "infectious-tribe",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "guilty-anthropology",
+   "id": "quarterly-morris",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dutch-impression",
+   "id": "placed-anchor",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1006,10 +1006,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-presentation",
+   "id": "ongoing-knight",
    "metadata": {},
    "source": [
-    "Discuss any challenges or difficulties you faced when dealing with this large data on your laptops. Briefly explain your approach to overcome the the challenges or reasons why you were not able to overcome them."
+    "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
+    "* There are different file syntax between Windows and macOS that we have managed to debug successfully.\n",
+    "* The `rpy2` is another obstacle given two of our members could not run this extension in Jupyter Notebooks despite many debugging attempts. In the end, we decide to test run the R code in RStudios first and then paste it in the Jupyter Notebooks and ask the other member with the most robust machine to run it in Jupyter Notebooks. "
    ]
   }
  ],
