update combined syntax and add one more R EDA

--- a/notebooks/milestone1.ipynb
+++ b/notebooks/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "legendary-horror",
+   "id": "empty-lindsay",
    "metadata": {},
    "source": [
     "# DSCI 525: Milestone 1\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "superior-mortality",
+   "id": "australian-meter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cooperative-rebate",
+   "id": "pending-juvenile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "planned-measurement",
+   "id": "silver-traffic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjustable-orange",
+   "id": "daily-applicant",
    "metadata": {},
    "source": [
     "## A) Downloading the data"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "registered-persian",
+   "id": "excess-ability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "yellow-toilet",
+   "id": "statewide-requirement",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "general-circus",
+   "id": "posted-affiliate",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fantastic-testimony",
+   "id": "swiss-romantic",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hired-jewelry",
+   "id": "funky-canada",
    "metadata": {},
    "source": [
     "## B) Combining data CSVs"
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "selective-pasta",
+   "id": "arranged-logging",
    "metadata": {},
    "outputs": [
     {
@@ -236,35 +236,37 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "touched-ordering",
+   "id": "average-makeup",
    "metadata": {},
    "outputs": [],
    "source": [
     "# For Mac OS:\n",
     "\n",
-    "#if 'figshareairline/combined_data.csv' or 'figshareairline/observed_daily_rainfall_SYD.csv' in (files):\n",
-    "#    files.remove('figshareairline/combined_data.csv')\n",
-    "#    files.remove('figshareairline/observed_daily_rainfall_SYD.csv')"
+    "# if 'figshareairline/combined_data.csv' in (files):\n",
+    "#     files.remove('figshareairline/combined_data.csv')\n",
+    "# if 'figshareairline/observed_daily_rainfall_SYD.csv' in (files):\n",
+    "#     files.remove('figshareairline/observed_daily_rainfall_SYD.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "subsequent-celebration",
+   "id": "hidden-arabic",
    "metadata": {},
    "outputs": [],
    "source": [
     "# For Windows:\n",
     "\n",
-    "if 'figshareairline\\\\combined_data.csv' or 'figshareairline\\\\observed_daily_rainfall_SYD.csv' in (files):\n",
+    "if 'figshareairline\\\\combined_data.csv' in (files):\n",
     "    files.remove('figshareairline\\\\combined_data.csv')\n",
+    "if 'figshareairline\\\\observed_daily_rainfall_SYD.csv' in (files):\n",
     "    files.remove('figshareairline\\\\observed_daily_rainfall_SYD.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "piano-intake",
+   "id": "spoken-saver",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "mediterranean-dance",
+   "id": "quick-progress",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "hindu-short",
+   "id": "fifth-coordination",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "shared-cheat",
+   "id": "numeric-grass",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "august-sheet",
+   "id": "fresh-burns",
    "metadata": {
     "tags": []
    },
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "printable-water",
+   "id": "floppy-truck",
    "metadata": {},
    "source": [
     "**Comparison in run times and memory usages on different machines**\n",
@@ -480,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-trust",
+   "id": "similar-catalyst",
    "metadata": {},
    "source": [
     "**Comment:**\n",
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flush-nerve",
+   "id": "legitimate-mobility",
    "metadata": {},
    "source": [
     "## C) Load combined CSV to memory and perform a simple EDA in Python"
@@ -500,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crucial-olympus",
+   "id": "presidential-spine",
    "metadata": {},
    "source": [
     "### 1. How many records in each type of model?\n",
@@ -510,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "varying-shelf",
+   "id": "touched-insertion",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smart-minutes",
+   "id": "relevant-score",
    "metadata": {},
    "source": [
     "#### 1.2. Loading in chunk "
@@ -568,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "acquired-certification",
+   "id": "adjusted-insertion",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "auburn-margin",
+   "id": "vocal-lending",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer-dependent)\n",
@@ -629,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sound-visiting",
+   "id": "magnetic-brother",
    "metadata": {},
    "source": [
     "### 2. What is the average rain fall (mm/day) for the respective models\n",
@@ -639,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "colonial-values",
+   "id": "unsigned-yemen",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informed-twins",
+   "id": "infinite-metabolism",
    "metadata": {},
    "source": [
     "#### 2.2 Only load the columns that we are interested in"
@@ -698,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "smart-morris",
+   "id": "dutch-heritage",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deadly-coaching",
+   "id": "congressional-thousand",
    "metadata": {},
    "source": [
     "#### 2.3 Using dask"
@@ -758,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "characteristic-gasoline",
+   "id": "corporate-neighborhood",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "urban-emission",
+   "id": "proof-vacuum",
    "metadata": {},
    "source": [
     "**Comment:** (Results are computer dependent)\n",
@@ -821,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "permanent-attribute",
+   "id": "equipped-fiber",
    "metadata": {},
    "source": [
     "## D) Transfer dataframe from Python to R and Perform a simple R EDA"
@@ -829,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-coordinator",
+   "id": "eight-lending",
    "metadata": {},
    "source": [
     "### 1. Comparing the different file formats created in Python in terms of file size"
@@ -838,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "detailed-store",
+   "id": "included-seventh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "tutorial-tenant",
+   "id": "minute-salad",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "stainless-breakdown",
+   "id": "legitimate-scottish",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "recorded-volleyball",
+   "id": "recorded-solid",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "concrete-frost",
+   "id": "therapeutic-gamma",
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-imperial",
+   "id": "unnecessary-hours",
    "metadata": {},
    "source": [
     "### 2. Rationale for why we chose **parquet** file format to transfer dataframe from python to R:\n",
@@ -962,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infectious-tribe",
+   "id": "electronic-forge",
    "metadata": {},
    "source": [
     "### 3. Transfer data file to R using pacquet and conduct a simple R EDA"
@@ -971,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quarterly-morris",
+   "id": "double-republic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,22 +985,36 @@
     "r_table <- arrow::read_parquet('figshareairline/combined_data.parquet')\n",
     "\n",
     "# conduct simple EDA\n",
+    "\n",
+    "## EDA 1\n",
+    "library(dplyr)\n",
     "start_time <- Sys.time()\n",
     "\n",
-    "library(dplyr)\n",
-    "result <- r_table %>%\n",
+    "result_eda1 <- r_table %>%\n",
     "    group_by(model) %>%\n",
-    "    summarise(mean(`rain (mm/day)`))\n",
+    "    summarise(no_of_records = n()) \n",
     "\n",
     "end_time <- Sys.time()\n",
     "\n",
-    "print(result)\n",
+    "print(result_eda1)\n",
+    "print(end_time - start_time)\n",
+    "\n",
+    "## EDA 2\n",
+    "start_time <- Sys.time()\n",
+    "\n",
+    "result_eda2 <- r_table %>%\n",
+    "    group_by(model) %>%\n",
+    "    summarise(average_rainfall = mean(`rain (mm/day)`)) \n",
+    "\n",
+    "end_time <- Sys.time()\n",
+    "\n",
+    "print(result_eda2)\n",
     "print(end_time - start_time)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "placed-anchor",
+   "id": "eleven-basket",
    "metadata": {},
    "source": [
     "## Closing comments"
@@ -1006,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-knight",
+   "id": "handed-mission",
    "metadata": {},
    "source": [
     "* Given the size of this data is quite large, the time it took us to run the code is quite long.\n",
